# manganese-nodule-prediction

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
labels/: Fe-Mn_nod_1976_Tab2.tab  Fewkes_1980_2.tab  Fewkes_1980_3.tab  Glasby_1973.tab  Piper-etal_1979_tab8.tab  Piper_1977-I.tab  Piper_1977-II.tab  Sorem-etal_1979_T1.tab
outputs/: model_metrics.txt  predictions.html  sample_locations.html
