[project]
name = "rare-earths"
version = "0.1.0"
description = "Manganese nodule concentration prediction from bathymetry"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "polars>=1.0.0",
    "xarray>=2024.1.0",
    "netcdf4>=1.6.0",
    "scipy>=1.12.0",
    "numpy>=1.26.0",
    "xgboost>=2.0.0",
    "scikit-learn>=1.4.0",
    "folium>=0.15.0",
    "matplotlib>=3.8.0",
]
